tests/ui/object-safety/bare-trait-dont-suggest-dyn.new.stderr
error[E0782]: trait objects must include the `dyn` keyword
  --> $DIR/bare-trait-dont-suggest-dyn.rs:6:33
   |
LL | fn ord_prefer_dot(s: String) -> Ord {
   |                                 ^^^
   |
help: `Ord` is not object safe, use `impl Ord` to return an opaque type, as long as you return a single underlying type
   |
LL | fn ord_prefer_dot(s: String) -> impl Ord {
   |                                 ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0782`.
